--- a/node/control.html
+++ b/node/control.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="player2 controls">
 
-					<div id="button4" class="arduino-buttons"></div>
+					
 					<div id="button5" class="arduino-buttons"></div>
 					<div id="button6" class="arduino-buttons"></div>
 
@@ -39,21 +39,11 @@
 			</div>
 			<div class="player3 controls">
 
-					<div id="button2" class="arduino-buttons"></div>
-					<div id="button3" class="arduino-buttons"></div>
+					<div id="button2" class="arduino-buttons toggle"></div>
+					<div id="button4" class="arduino-buttons big"></div>
+					<div id="button3" class="arduino-buttons toggle"></div>
 
-					<div class="arduino-buttons arduino-rotar">
-
-							<a class="rotar-num">1</a>
-
-					</div>
-					<div class="arduino-buttons arduino-rotar">
-
-							<a class="rotar-num">1</a>
-							
-					</div>
-
-					<div class="arduino-buttons arduino-slider"></div>
+					<div id="slider1" class="arduino-buttons arduino-slider"></div>
 
 			</div>
 		</div>
