ultrasound working with command control

--- a/node/control.html
+++ b/node/control.html
@@ -15,11 +15,15 @@
 		<h1 id="welcome"> Command control</h1>
 
 		<div class="container">
+			<div class="player0 controls">
+				<a id="ul1">0<a/>
+				<a id="ul2">0<a/>
+			</div>
 
 			<div class="player1 controls">
 
-					<div  id="ir1" class="arduino-ir arduino-buttons"></div>
-					<div id="ir2" class="arduino-ir arduino-buttons"></div>
+					<div  id="ir2" class="arduino-ir arduino-buttons"></div>
+					<div id="ir1" class="arduino-ir arduino-buttons"></div>
 
 			</div>
 			
