worked on messaging system, socket system

--- a/node/control.html
+++ b/node/control.html
@@ -15,19 +15,19 @@
 		<h1 id="welcome"> Command control</h1>
 
 		<div class="container">
-			<div class="player0 controls">
-				<a id="ul1">0<a/>
+			<div class="player0-c controls">
 				<a id="ul2">0<a/>
+				<a id="ul1">0<a/>
 			</div>
 
-			<div class="player1 controls">
+			<div class="player1-c controls">
 
 					<div  id="ir2" class="arduino-ir arduino-buttons"></div>
 					<div id="ir1" class="arduino-ir arduino-buttons"></div>
 
 			</div>
 			
-			<div class="player3 controls">
+			<div class="player3-c controls">
 
 					<div id="button3" class="arduino-buttons toggle"></div>
 					<div id="button2" class="arduino-buttons big"></div>
