--- a/node/player1.html
+++ b/node/player1.html
@@ -12,11 +12,12 @@
 
 	<body>
 
-		<h1 id="welcome"> Some stuff here </h1>
+		<h1 id="welcome"> Player 1 </h1>
+		<h1 id="incomming" class="player1"> Player 1 </h1>
 
-			<script src="js/jQueryv1.7.2.min.js"></script> 
+			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
-            <script src="js/main.js"></script>
+            <script src="/js/main.js"></script>
 
 			
 	</body>
