--- a/node/player1.html
+++ b/node/player1.html
@@ -11,7 +11,7 @@
 
 
 	<body>
-
+		<div id="start" class="start"></div>
 		<h1 id="welcome"> Player 1 </h1>
 		<h1 id="incomming" class="player1"> Player 1 </h1>
 
