Added Compass | setup player 2 & 3 visual input displays

--- a/node/control.html
+++ b/node/control.html
@@ -20,12 +20,12 @@
 				<a id="ul1">0<a/>
 			</div>
 
-			<div class="player1-c controls">
+			<!-- <div class="player1-c controls">
 
 					<div  id="ir2" class="arduino-ir arduino-buttons"></div>
 					<div id="ir1" class="arduino-ir arduino-buttons"></div>
 
-			</div>
+			</div> -->
 			
 			<div class="player3-c controls">
 
