--- a/node/player2.html
+++ b/node/player2.html
@@ -15,6 +15,70 @@
 		<h1 id="welcome"> Player 2 </h1>
 		<h1 id="incomming" class="player2"> Player 2 </h1>
 
+		<div class="player2 controls">
+			
+			
+			<div class="input input-slider-s">
+				<a id="slider1name" class="button-name"> Slider 1 </a>
+				<div id="slider1" class="arduino-buttons sliderSmall"></div>
+			</div>
+
+			<div class="top-inputs">
+
+				<div class="input ">
+					<a id="btn5name" class="button-name"> button 5 </a>
+					<div id="button5" class="arduino-buttons toggle"></div>
+				</div>
+
+				
+
+				<div class="input">
+					<a id="rotary2name" class="button-name"> Rotary 2 </a>
+					<div id="rotary2" class="arduino-buttons rotary">
+						<a id="rotary2num" class="rotary-num"></a>
+					</div>
+				</div>
+
+
+				<div class="input">
+					<a id="btn7name" class="button-name"> button 7 </a>
+					<div id="button7" class="arduino-buttons rrRound"></div>
+				</div>
+
+			</div>
+			<div class="input input-slider-s f-right">
+				<a id="slider2name" class="button-name"> Slider 2 </a>
+				<div id="slider2" class="arduino-buttons sliderSmall"></div>
+			</div>
+			
+			<div class="bottom-inputs">
+
+				<div class="input ">
+					<a id="rotary1name" class="button-name"> Rotary 1 </a>
+					<div id="rotary1" class="arduino-buttons rotary">
+						<a id="rotary1num" class="rotary-num"></a>
+					</div>
+				</div>
+
+
+
+				<div class="input">
+					<a id="btn6name" class="button-name"> button 6 </a>
+					<div id="button6" class="arduino-buttons toggle"></div>
+				</div>
+
+			</div>
+
+			
+
+			
+
+			
+
+			
+
+		</div>
+
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
             <script src="/js/main.js"></script>
