--- a/node/player3.html
+++ b/node/player3.html
@@ -13,28 +13,51 @@
 	<body>
 
 		<h1 id="welcome"> Player 3 </h1>
-		<h1 id="incomming" class="player3"> Player 3 </h1>
+
+		<h1 id="incomming" class="player3"> Message 3 </h1>
 
 
-		<div class="player3-c controls">
-
-			<div>
-
-			<a id="btn3name" class="button-name"> button 3 </a>
-			<a id="btn4name" class="button-name"> button 4 </a>
-
-			<a id="btn5name" class="button-name"> button 5 </a>
-
+		<div class="player3 controls">
+			
+			
+			<div class="input">
+				<a id="btn0name" class="button-name"> button 0 </a>
+				<div id="button0" class="arduino-buttons rrBig"></div>
 			</div>
-			
-			<div id="button3" class="arduino-buttons toggle"></div>
-		
-			<div id="button4" class="arduino-buttons big"></div>
+
+			<div class="input">
+				<a id="btn1name" class="button-name"> button 1 </a>
+				<div id="button1" class="arduino-buttons rrBig"></div>
+			</div>
+
+			<div class="input">
+				<a id="btn2name" class="button-name"> button 2 </a>
+				<div id="button2" class="arduino-buttons toggle"></div>
+			</div>
+
+			<div class="input input-small-rr">
+				<a id="btn3name" class="button-name"> button 3 </a>
+				<div id="button3" class="arduino-buttons rrSmall"></div>
+			</div>
+
+			<div class="input input-small-rr">
+				<a id="btn4name" class="button-name"> button 4 </a>
+				<div id="button4" class="arduino-buttons rrSmall"></div>
+			</div>
+
+			<div class="input input-slider-l">
+				<a id="slider0name" class="button-name"> Slider 0 </a>
+				<div id="slider0" class="arduino-buttons sliderLarge"></div>
+			</div>
+
+			<div class="input">
+				<a id="rotary0name" class="button-name"> Rotary 0 </a>
+				<div id="rotary0" class="arduino-buttons rotary">
+					<a id="rotary0num" class="rotary-num"></a>
+				</div>
+			</div>
 
 			
-			<div id="button5" class="arduino-buttons toggle"></div>
-
-			<div id="slider1" class="arduino-buttons arduino-slider"></div>
 
 		</div>
 
