updated button name mapping for both players inputs

--- a/node/player2.html
+++ b/node/player2.html
@@ -13,7 +13,7 @@
 	<body>
 
 		<h1 id="welcome"> Player 2 </h1>
-		<h1 id="incomming" class="player2"> Player 2 </h1>
+		<h1 id="incomming" class="player2"> Message 2 </h1>
 
 		<div class="player2 controls">
 			
@@ -50,7 +50,7 @@
 				<a id="slider2name" class="button-name"> Slider 2 </a>
 				<div id="slider2" class="arduino-buttons sliderSmall"></div>
 			</div>
-			
+
 			<div class="bottom-inputs">
 
 				<div class="input ">
