--- a/node/player3.html
+++ b/node/player3.html
@@ -35,13 +35,13 @@
 				<div id="button2" class="arduino-buttons toggle"></div>
 			</div>
 
-			<div class="input input-small-rr">
-				<a id="btn3name" class="button-name"> button 3 </a>
+			<div class="input input-small-rr ">
+				<a id="btn3name" class="button-name rrS"> button 3 </a>
 				<div id="button3" class="arduino-buttons rrSmall"></div>
 			</div>
 
 			<div class="input input-small-rr">
-				<a id="btn4name" class="button-name"> button 4 </a>
+				<a id="btn4name" class="button-name rrS"> button 4 </a>
 				<div id="button4" class="arduino-buttons rrSmall"></div>
 			</div>
 
