added visual timer functionality to screens

--- a/node/player2.html
+++ b/node/player2.html
@@ -15,6 +15,8 @@
 		<h1 id="welcome"> Player 2 </h1>
 		<h1 id="incomming" class="player2"> Message 2 </h1>
 
+		<div id="timer" class="player1 timer">  </div>
+
 		<div class="player2 controls">
 			
 			
