--- a/node/player3.html
+++ b/node/player3.html
@@ -16,6 +16,7 @@
 
 		<h1 id="incomming" class="player3"> Message 3 </h1>
 
+		<div id="timer" class="player1 timer">  </div>
 
 		<div class="player3 controls">
 			
