--- a/node/player1.html
+++ b/node/player1.html
@@ -13,8 +13,11 @@
 	<body>
 		<div id="start" class="start"></div>
 		<h1 id="welcome"> Player 1 </h1>
-		<h1 id="incomming" class="player1"> Player 1 </h1>
-
+		<h1 id="incomming" class="player1 message"> Message 1 </h1>
+		
+		
+			<div id="timer" class="player1 timer">  </div>
+		
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
             <script src="/js/main.js"></script>
