added vlevel & point modules, visual health system

--- a/node/p1start.html
+++ b/node/p1start.html
@@ -11,23 +11,14 @@
 
 
 	<body>
+
+		 <a href="/player1"> <div class="ready"> Ready? </div> </a> 
+
+
 		
-		<h1 id="welcome"> Command control</h1>
-
-		<div class="container">
-			<div class="player0-c controls">
-				<a id="ul2">0<a/>
-				<a id="ul1">0<a/>
-			</div>
-
-			
-		</div>
-
-			<script src="/js/jQueryv1.7.2.min.js"></script> 
-            <script src="/socket.io/socket.io.js"></script>
-            <script src="/js/main.js"></script>
-
-			
+		<script src="/js/jQueryv1.7.2.min.js"></script> 
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/main.js"></script>		
 	</body>
 </html>
 
