--- a/node/player2.html
+++ b/node/player2.html
@@ -11,9 +11,8 @@
 
 
 	<body>
-
-		<h1 id="welcome"> Player 2 </h1>
-		<h1 id="incomming" class="player2"> Message 2 </h1>
+		<div class="health"></div>
+		<h1 id="incomming" class="message"> Message 2 </h1>
 
 		<div id="timer" class="player1 timer">  </div>
 
