--- a/node/player1.html
+++ b/node/player1.html
@@ -11,12 +11,14 @@
 
 
 	<body>
-		<div id="start" class="start"></div>
-		<h1 id="welcome"> Player 1 </h1>
-		<h1 id="incomming" class="player1 message"> Message 1 </h1>
+		
+		<div class="health"></div>
+		<h1 id="incomming" class="message"> Message 1 </h1>
 		
 		
-			<div id="timer" class="player1 timer">  </div>
+			<div id="timer" class="timer">  </div>
+
+			<div id="start" class="start"> Start</div>
 		
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
