--- a/node/player3.html
+++ b/node/player3.html
@@ -11,12 +11,11 @@
 
 
 	<body>
+		<div class="health"></div>
 
-		<h1 id="welcome"> Player 3 </h1>
+		<h1 id="incomming" class="message"> Message 3 </h1>
 
-		<h1 id="incomming" class="player3"> Message 3 </h1>
-
-		<div id="timer" class="player1 timer">  </div>
+		<div id="timer" class=" timer">  </div>
 
 		<div class="player3 controls">
 			
