level system start/stop/ lose/complete level

--- a/node/player1.html
+++ b/node/player1.html
@@ -19,6 +19,7 @@
 			<div id="timer" class="timer">  </div>
 
 			<div id="start" class="start"> Start</div>
+			<div id="stop" class="start stop"> Stop</div>
 		
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
