added dynamic level system/ display new level screen

--- a/node/end.html
+++ b/node/end.html
@@ -16,7 +16,7 @@
 
 		<p> <span id="#levels"></span> interstellar systems survived </p>
 
-		<p> <span id="#switches"></span> activated &amp; deactivated </p>
+		<p> <span id="#switches"></span> switches activated &amp; deactivated </p>
 
 		<p> <span id="#sliders"></span>  sliding paramaters </p>
 
