--- a/node/player2.html
+++ b/node/player2.html
@@ -72,10 +72,13 @@
 
 			
 
-			
+			<div class="level">
 
-			
 
+			<p> Warping to sector   <span id="level-num"></span></p>
+
+
+			</div>
 			
 
 		</div>
