--- a/node/player3.html
+++ b/node/player3.html
@@ -57,7 +57,13 @@
 				</div>
 			</div>
 
-			
+			<div class="level">
+
+
+			<p> Warping to sector   <span id="level-num"></span></p>
+
+
+			</div>
 
 		</div>
 
