--- a/node/player1.html
+++ b/node/player1.html
@@ -12,6 +12,7 @@
 
 	<body>
 		
+
 		<div class="health"></div>
 		<h1 id="incomming" class="message"> Message 1 </h1>
 		
@@ -20,7 +21,15 @@
 
 			<div id="start" class="start"> Start</div>
 			<div id="stop" class="start stop"> Stop</div>
-		
+			
+			<div class="level">
+
+
+			<p> Warping to sector   <span id="level-num"></span></p>
+
+
+			</div>
+
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
             <script src="/js/main.js"></script>
