--- a/node/end.html
+++ b/node/end.html
@@ -14,13 +14,12 @@
 
 		<h1> Game Over </h1>
 
-		<p> <span id="#levels"></span> interstellar systems survived </p>
+		<p> <span id="levels"></span> Interstellar systems survived </p>
 
-		<p> <span id="#switches"></span> switches activated &amp; deactivated </p>
+		<p> <span id="switches"></span> Switches activated &amp; deactivated </p>
 
-		<p> <span id="#sliders"></span>  sliding paramaters </p>
+		<p> <span id="pots"></span> Space knobs &amp; sliding paramaters used</p>
 
-		<p> <span id="#rotarys"></span> space knobs turned </p>
 
 		<div id="playagain" > Play Again?</div>
 		
