--- a/node/player2.html
+++ b/node/player2.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<div class="health"></div>
-		<h1 id="incomming" class="message"> Message 2 </h1>
+		<h1 id="incomming" class="message"> incoming message... </h1>
 
 		<div id="timer" class="player1 timer">  </div>
 
