--- a/node/player3.html
+++ b/node/player3.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="health"></div>
 
-		<h1 id="incomming" class="message"> Message 3 </h1>
+		<h1 id="incomming" class="message"> incoming message... </h1>
 
 		<div id="timer" class=" timer">  </div>
 
