--- a/node/player1.html
+++ b/node/player1.html
@@ -16,12 +16,54 @@
 		<div class="health"></div>
 		<h1 id="incomming" class="message"> incoming message... </h1>
 		
-		
+			
+
+
 			<div id="timer" class="timer">  </div>
 
-			<div id="start" class="start"> Start</div>
-			<div id="stop" class="start stop"> Stop</div>
+
+			<div class="player1 controls">
 			
+			
+			<div class="input">
+				<a id="btn8name" class="button-name"> button 8 </a>
+				<div id="button8" class="arduino-buttons toggle"></div>
+			</div>
+
+			<div class="input input-slider-l">
+				<a id="slider3name" class="button-name"> Slider 3 </a>
+				<div id="slider3" class="arduino-buttons sliderLarge"></div>
+			</div>
+			
+			<div class="input">
+				<a id="btn9name" class="button-name"> button 9 </a>
+				<div id="button9" class="arduino-buttons rrBig"></div>
+			</div>
+
+			<div class="input">
+				<a id="btn10name" class="button-name"> button 10 </a>
+				<div id="button10" class="arduino-buttons rrBig"></div>
+			</div>
+
+			<div class="input">
+				<a id="btn11name" class="button-name rrS"> button 11 </a>
+				<div id="button11" class="arduino-buttons toggle"></div>
+			</div>
+
+			<div class="input ">
+				<a id="btn12name" class="button-name rrS"> button 12 </a>
+				<div id="button12" class="arduino-buttons rrBig"></div>
+			</div>
+
+			
+
+			<div class="input">
+				<a id="rotary3name" class="button-name"> Rotary 3 </a>
+				<div id="rotary3" class="arduino-buttons rotary">
+					<a id="rotary3num" class="rotary-num"></a>
+				</div>
+			</div>
+
 			<div class="level">
 
 
@@ -29,6 +71,13 @@
 
 
 			</div>
+
+		</div>
+
+			<div id="start" class="start"> Start</div>
+			<div id="stop" class="start stop"> Stop</div>
+			
+		
 
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
