--- a/node/player3.html
+++ b/node/player3.html
@@ -11,7 +11,7 @@
 
 
 	<body>
-		<div class="health"></div>
+		<!-- <div class="health"></div>
 
 		<h1 id="incomming" class="message"> incoming message... </h1>
 
@@ -64,6 +64,65 @@
 
 
 			</div>
+
+		</div> -->
+
+		<div class="pannel">
+			<div class="b-y-line"></div>
+			<div class="black-incoming">
+
+			<h1 id="incomming" class="message"> receiving... </h1>
+			</div>
+			<div class="b-y-line"></div>
+
+			<div id="timer" class="timer-r"></div>
+
+				
+				
+				<div class="input">
+					<a id="btn0name" class="button-name"> button 0 </a>
+					<div id="button0" class="arduino-buttons rrBig"></div>
+				</div>
+
+				<div class="input">
+					<a id="btn1name" class="button-name"> button 1 </a>
+					<div id="button1" class="arduino-buttons rrBig"></div>
+				</div>
+
+				<div class="input">
+					<a id="btn2name" class="button-name"> button 2 </a>
+					<div id="button2" class="arduino-buttons toggle"></div>
+				</div>
+
+				<div class="input input-small-rr ">
+					<a id="btn3name" class="button-name rrS"> button 3 </a>
+					<div id="button3" class="arduino-buttons rrSmall"></div>
+				</div>
+
+				<div class="input input-small-rr">
+					<a id="btn4name" class="button-name rrS"> button 4 </a>
+					<div id="button4" class="arduino-buttons rrSmall"></div>
+				</div>
+
+				<div class="input input-slider-l">
+					<a id="slider0name" class="button-name"> Slider 0 </a>
+					<div id="slider0" class="arduino-buttons sliderLarge"></div>
+				</div>
+
+				<div class="input">
+					<a id="rotary0name" class="button-name"> Rotary 0 </a>
+					<div id="rotary0" class="arduino-buttons rotary">
+						<a id="rotary0num" class="rotary-num"></a>
+					</div>
+				</div>
+
+				<div class="level">
+
+
+				<p> Warping to sector   <span id="level-num"></span></p>
+
+
+				</div>
 
 		</div>
 
