ui elements for first player

--- a/node/player3.html
+++ b/node/player3.html
@@ -86,7 +86,7 @@
 
 				<div class="input">
 					<a id="btn1name" class="button-name"> button 1 </a>
-					<div id="button1" class="arduino-buttons rrBig"></div>
+					<div id="button1" class="arduino-buttons greenRocker"></div>
 				</div>
 
 				<div class="input">
