timing changes per level, more ui stuff

--- a/node/player1.html
+++ b/node/player1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-			<title>FYP Client</title>
+			<title>Command Control : 2</title>
 			<meta charset="utf-8">
 			<meta name="description" content="">
 			<meta name="author" content="Sam Billingham">
