--- a/node/player2.html
+++ b/node/player2.html
@@ -11,7 +11,8 @@
 
 
 	<body>
-		<div class="health"></div>
+
+		<!-- <div class="health"></div>
 		<h1 id="incomming" class="message"> incoming message... </h1>
 
 		<div id="timer" class="player1 timer">  </div>
@@ -68,20 +69,81 @@
 					<div id="button6" class="arduino-buttons toggle"></div>
 				</div>
 
-			</div>
+			</div> -->
 
 			
+			<div class="pannel">
+			<div class="b-y-line"></div>
+			<div class="black-incoming">
 
-			<div class="level">
+			<h1 id="incomming" class="message"> receiving... </h1>
+			</div>
+			<div class="b-y-line"></div>
+
+			<div id="timer" class="timer"></div>
+			
+			
+			<div class="input input-slider-s">
+				<a id="slider1name" class="button-name"> Slider 1 </a>
+				<div id="slider1" class="arduino-buttons sliderSmall"></div>
+			</div>
+
+			<div class="top-inputs">
+
+				<div class="input ">
+					<a id="btn5name" class="button-name"> button 5 </a>
+					<div id="button5" class="arduino-buttons toggle"></div>
+				</div>
+
+				
+
+				<div class="input">
+					<a id="rotary2name" class="button-name"> Rotary 2 </a>
+					<div id="rotary2" class="arduino-buttons rotary silver-rotary">
+						<a id="rotary2num" class="rotary-num"></a>
+					</div>
+				</div>
 
 
-			<p> Warping to sector   <span id="level-num"></span></p>
-
+				<div class="input">
+					<a id="btn7name" class="button-name"> button 7 </a>
+					<div id="button7" class="arduino-buttons rrRound"></div>
+				</div>
 
 			</div>
-			
+			<div class="input input-slider-s f-right">
+				<a id="slider2name" class="button-name"> Slider 2 </a>
+				<div id="slider2" class="arduino-buttons sliderSmall"></div>
+			</div>
+
+			<div class="bottom-inputs">
+
+				<div class="input ">
+					<a id="rotary1name" class="button-name"> Rotary 1 </a>
+					<div id="rotary1" class="arduino-buttons rotary silver-rotary">
+						<a id="rotary1num" class="rotary-num"></a>
+					</div>
+				</div>
+
+
+
+				<div class="input">
+					<a id="btn6name" class="button-name"> button 6 </a>
+					<div id="button6" class="arduino-buttons toggle"></div>
+				</div>				
+
+				<div class="level">
+
+
+				<p> Warping to sector   <span id="level-num"></span></p>
+
+
+				</div>
 
 		</div>
+
+		
+	
 
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
