complete ui button set for all players

--- a/node/player2.html
+++ b/node/player2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-			<title>FYP Client</title>
+			<title>Command Control : 2</title>
 			<meta charset="utf-8">
 			<meta name="description" content="">
 			<meta name="author" content="Sam Billingham">
@@ -20,54 +20,6 @@
 		<div class="player2 controls">
 			
 			
-			<div class="input input-slider-s">
-				<a id="slider1name" class="button-name"> Slider 1 </a>
-				<div id="slider1" class="arduino-buttons sliderSmall"></div>
-			</div>
-
-			<div class="top-inputs">
-
-				<div class="input ">
-					<a id="btn5name" class="button-name"> button 5 </a>
-					<div id="button5" class="arduino-buttons toggle"></div>
-				</div>
-
-				
-
-				<div class="input">
-					<a id="rotary2name" class="button-name"> Rotary 2 </a>
-					<div id="rotary2" class="arduino-buttons rotary">
-						<a id="rotary2num" class="rotary-num"></a>
-					</div>
-				</div>
-
-
-				<div class="input">
-					<a id="btn7name" class="button-name"> button 7 </a>
-					<div id="button7" class="arduino-buttons rrRound"></div>
-				</div>
-
-			</div>
-			<div class="input input-slider-s f-right">
-				<a id="slider2name" class="button-name"> Slider 2 </a>
-				<div id="slider2" class="arduino-buttons sliderSmall"></div>
-			</div>
-
-			<div class="bottom-inputs">
-
-				<div class="input ">
-					<a id="rotary1name" class="button-name"> Rotary 1 </a>
-					<div id="rotary1" class="arduino-buttons rotary">
-						<a id="rotary1num" class="rotary-num"></a>
-					</div>
-				</div>
-
-
-
-				<div class="input">
-					<a id="btn6name" class="button-name"> button 6 </a>
-					<div id="button6" class="arduino-buttons toggle"></div>
-				</div>
 
 			</div> -->
 
@@ -106,7 +58,7 @@
 
 
 				<div class="input">
-					<a id="btn7name" class="button-name"> button 7 </a>
+					<a id="btn7name" class="button-name roundRocker"> button 7 </a>
 					<div id="button7" class="arduino-buttons rrRound"></div>
 				</div>
 
