--- a/node/player3.html
+++ b/node/player3.html
@@ -59,7 +59,7 @@
 
 				<div class="input">
 					<a id="rotary0name" class="button-name"> Rotary 0 </a>
-					<div id="rotary0" class="arduino-buttons rotary">
+					<div id="rotary0" class="arduino-buttons rotary red-rotary">
 						<a id="rotary0num" class="rotary-num"></a>
 					</div>
 				</div>
