--- a/node/control.html
+++ b/node/control.html
@@ -22,6 +22,8 @@
 
 			
 		</div>
+		
+			<div id="start" class="start"> Start</div>
 
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
