--- a/node/player3.html
+++ b/node/player3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-			<title>Command Control : 3</title>
+			<title>Command Control : Navigation</title>
 			<meta charset="utf-8">
 			<meta name="description" content="">
 			<meta name="author" content="Sam Billingham">
@@ -64,13 +64,44 @@
 					</div>
 				</div>
 
-				<div class="level">
+				<div class="connection-screen show">
+					<div class="b-y-line push-line "></div>
 
+					<p class="connection-name"> Navigation </p>
 
-				<p> Warping to sector   <span id="level-num"></span></p>
+					<div class="b-y-line push-line "></div>
 
 
 				</div>
+
+				<div class="starting-screen">
+					<div class="b-y-line push-line "></div>
+
+					<div class="starting-messages">
+						<p class="start-message-1 "> Your ship is falling apart help make repairs while you are in warp </p>
+
+						<p class="start-message-2"> Follow the instructions quickly and correctly or your ship will be damaged </p>
+					</div>
+
+					<div class="b-y-line"></div>
+				</div>
+
+				<div class="level">
+
+				<p> Warp Drive Active | Zone : <span id="level-num"></span></p>
+
+
+				</div>
+
+				<div class="end-level">
+
+
+				<p> Your ship made it through warp Zone <span id="level-num"></span></p>
+				<p> prepare to warp </p>
+
+
+				</div>
+			
 
 		</div>
 
