started adding more comment for hand in | added check before allowing starting game

--- a/node/player2.html
+++ b/node/player2.html
@@ -92,6 +92,7 @@
 					<div class="b-y-line push-line "></div>
 
 					<div id="start" class="warp-button"> <p > Start </p></div>
+					<div id="start-error"> <p class="start-error">  </p></div>
 
 				</div>
 
