prep for presentation

--- a/node/player2.html
+++ b/node/player2.html
@@ -36,11 +36,11 @@
 			
 			
 			<div class="input input-slider-s">
-				<a id="slider1name" class="button-name"> Slider 1 </a>
+				<a id="slider1name" class="button-name small-slider-name"> Slider 1 </a>
 				<div id="slider1" class="arduino-buttons sliderSmall"></div>
 			</div>
 
-			<div class="top-inputs">
+			<div class="top-inputs push-right">
 
 				<div class="input ">
 					<a id="btn5name" class="button-name"> button 5 </a>
@@ -64,11 +64,11 @@
 
 			</div>
 			<div class="input input-slider-s f-right">
-				<a id="slider2name" class="button-name"> Slider 2 </a>
+				<a id="slider2name" class="button-name small-slider-name"> Slider 2 </a>
 				<div id="slider2" class="arduino-buttons sliderSmall"></div>
 			</div>
 
-			<div class="bottom-inputs">
+			<div class="bottom-inputs p2-bottom">
 
 				<div class="input ">
 					<a id="rotary1name" class="button-name"> Rotary 1 </a>
@@ -90,8 +90,8 @@
 					<p class="connection-name"> The Bridge </p>
 
 					<div class="b-y-line push-line "></div>
-
-					<div id="start" class="warp-button"> <p > Start </p></div>
+					<div class="controllers"> <p class="arduino-connection"> </p></div>
+					<div id="start" class="warp-button"> <p > Lets do this </p></div>
 					<div id="start-error"> <p class="start-error">  </p></div>
 
 				</div>
@@ -132,7 +132,7 @@
 
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
-            <script src="/js/main.js"></script>
+            <script src="/js/main-ck.js"></script>
 
 			
 	</body>
