--- a/node/player3.html
+++ b/node/player3.html
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="input">
-					<a id="rotary0name" class="button-name"> Rotary 0 </a>
+					<a id="rotary0name" class="button-name red-rotary-name"> Rotary 0 </a>
 					<div id="rotary0" class="arduino-buttons rotary red-rotary">
 						<a id="rotary0num" class="rotary-num"></a>
 					</div>
@@ -107,7 +107,7 @@
 
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
-            <script src="/js/main.js"></script>
+            <script src="/js/main-ck.js"></script>
 
 			
 	</body>
