--- a/node/player1.html
+++ b/node/player1.html
@@ -114,7 +114,7 @@
 
 			<script src="/js/jQueryv1.7.2.min.js"></script> 
             <script src="/socket.io/socket.io.js"></script>
-            <script src="/js/main.js"></script>
+            <script src="/js/main-ck.js"></script>
 
 			
 	</body>
