added push button start

--- a/node/end3.html
+++ b/node/end3.html
@@ -15,7 +15,7 @@
 		<div class="pannel end-game">
 			<div class="b-y-line"></div>
 
-		<h1> Game Over </h1>
+		<h1> Your ship has been Destroyed </h1>
 
 			<p> <span id="levels"></span> Interstellar systems survived </p>
 
@@ -23,7 +23,6 @@
 
 			<p> <span id="pots"></span> Space knobs &amp; sliding paramaters used</p>
 
-			<a href="/player3" class="link-home"> Back to Navigation </a>
 		</div>
 		
 		<script src="/js/jQueryv1.7.2.min.js"></script> 
