--- a/node/player2.html
+++ b/node/player2.html
@@ -91,7 +91,7 @@
 
 					<div class="b-y-line push-line "></div>
 					<div class="controllers"> <p class="arduino-connection"> </p></div>
-					<div id="start" class="warp-button"> <p > Lets do this </p></div>
+					<!--<div id="start" class="warp-button"> <p > Lets do this </p></div>-->
 					<div id="start-error"> <p class="start-error">  </p></div>
 
 				</div>
