--- a/website/404.html
+++ b/website/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Page Not Found :(</title>
+        <title>Command Control | 404 Page :(</title>
         <style>
             ::-moz-selection {
                 background: #b3d4fc;
@@ -19,9 +19,16 @@
                 font-size: 20px;
                 line-height: 1.4;
                 color: #737373;
-                background: #f0f0f0;
-                -webkit-text-size-adjust: 100%;
-                -ms-text-size-adjust: 100%;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+
+                background: url(img/command-control-start.jpg);
+                background-position: center center;
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
             }
 
             html,
@@ -38,6 +45,8 @@
                 margin: 0 auto;
                 box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
                 background: #fcfcfc;
+                overflow: hidden;
+                
             }
 
             h1 {
@@ -143,15 +152,8 @@
         <div class="container">
             <h1>Not found <span>:(</span></h1>
             <p>Sorry, but the page you were trying to view does not exist.</p>
-            <p>It looks like this was the result of either:</p>
-            <ul>
-                <li>a mistyped address</li>
-                <li>an out-of-date link</li>
-            </ul>
-            <script>
-                var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
-            </script>
-            <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
+            <p>Try Going <a href="/"> Home </a></p>
+            
         </div>
     </body>
 </html>
