--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Command Conttrol | An Interactive Physical Game by Sam Billingham</title>
+        <title>Command Control | An Interactive Physical Game by Sam Billingham</title>
         <meta name="author" content="Sam Billingham">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
