some changes for VMGS showcase

--- a/node/end1.html
+++ b/node/end1.html
@@ -21,13 +21,13 @@
 
 			<p> <span id="switches"></span> Switches activated &amp; deactivated </p>
 
-			<p> <span id="pots"></span> Space knobs &amp; sliding paramaters used</p>
+			<p> <span id="pots"></span> Space dials &amp; sliding paramaters used</p>
 
 		</div>
 		
 		<script src="/js/jQueryv1.7.2.min.js"></script> 
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/main.js"></script>		
+        <script src="/js/main-ck.js"></script>		
 	</body>
 </html>
 
