--- a/node/player1.html
+++ b/node/player1.html
@@ -74,7 +74,8 @@
 					<p class="connection-name"> Engineering </p>
 
 					<div class="b-y-line push-line "></div>
-
+					<div class="controllers"> <p class="arduino-connection"> </p></div>
+					<div id="start-error"> <p class="start-error">  </p></div>
 				</div>
 
 				<div class="starting-screen">
@@ -83,7 +84,7 @@
 					<div class="starting-messages">
 						<p class="start-message-1 "> Your ship is falling apart help make repairs while you are in warp </p>
 
-						<p class="start-message-2"> Follow the instructions quickly and correctly or your ship will be damaged </p>
+						<p class="start-message-2"> Grab 2 fellow explorers and follow the instructions quickly or your ship will be damaged </p>
 					</div>
 
 					<div class="b-y-line"></div>
