--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Command Conttrol | An Interactive Physical Game by Sam Billingham</title>
+        <title>Command Control | An Interactive Physical Game by Sam Billingham</title>
         <meta name="author" content="Sam Billingham">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
@@ -36,9 +36,7 @@
         </div> 
         <div class="replace-header"></div>      
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-
+            <div class="intro-container">
                 <article>
                     <div class="intro"> 
                         <div class="video-container">
@@ -52,8 +50,11 @@
                         </div>
                     </div>
                 </article>
+            </div>
+            
+         <div class="main-container">
+            <div class="main wrapper clearfix">
 
-                
                 <article id="about">
                     <h2 class="h2-title">About </h2>
                     <p>Command Control was created for a final university project while studying for a BSc (Hons) Digital Art and Technology at Plymouth University by myself Sam Billingham. The idea was derived out of a number of goals. Creating something physical. learning new skills and pushing the boundaries of current skills. An established joy for Spaceteam.</p>
